# smali-tools

./: .gitignore  CMakeLists.txt  Makefile  README.md
grammar/: CMakeLists.txt  Dalvik bytecode _ Android Open Source Project.html  Dalvik opcodes.html  Makefile  Re2cLexer.hpp  Re2cLexer.re  Re2cProcessorBase.cpp  Re2cProcessorBase.hpp  Re2cTokenType.hpp  Re2cTokenType.txt  Re2cTokenTypes.txt  SmaliRe2cParser.cpp  SmaliRe2cParser.hpp  gendalvik.rb  smail.antlr  smali.antlr  smali.re  tokengen.rb
test/grammar/: CMakeLists.txt  foo_test.h  test_basic.cpp  test_basic.hpp  test_re2c.cpp  test_re2c.hpp
test/res/smali/: SnsUserUI.smali
